--- a/index.html
+++ b/index.html
@@ -10,33 +10,45 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logofirst"
-          >Web<span class="logosecond">Studio</span></a
-        >
-        <ul class="list site-nav">
-          <li><a href="./index.html" class="link current">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="email"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="tel">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="nav-addres">
+      <div class="container main-nav">
+        <nav class="site-nav">
+          <a href="./index.html" class="logofirst"
+            >Web<span class="logosecond">Studio</span></a
+          >
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="./index.html" class="link current">Studio</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="email"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+110001111111" class="tel">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--hero-->
@@ -48,118 +60,134 @@
 
       <!--Features-->
       <section class="section">
-        <h2 hidden class="section-title">Features</h2>
-        <ul class="feature-list list">
-          <li>
-            <h3 class="title">Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container features">
+          <h2 hidden class="section-title">Features</h2>
+          <ul class="feature-list list">
+            <li class="item">
+              <h3 class="title">Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--what doing-->
       <section class="section">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="what-list list">
-          <li>
-            <img src="./images/mac.jpg" alt="Mac" width="360" height="300" />
-          </li>
-          <li>
-            <img
-              src="./images/phones.jpg"
-              alt="iphones"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/phonehand.jpg"
-              alt="IphoneHandmacbook"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container doing">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="what-list list">
+            <li class="item">
+              <img src="./images/mac.jpg" alt="Mac" width="360" height="300" />
+            </li>
+            <li class="item">
+              <img
+                src="./images/phones.jpg"
+                alt="iphones"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/phonehand.jpg"
+                alt="IphoneHandmacbook"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--team-->
       <section class="section">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li>
-            <img
-              src="./images/mark.jpg"
-              alt="Mark photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/tom.jpg"
-              alt="Tom photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/camila.jpg"
-              alt="Camila photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/daneil.jpg"
-              alt="Daniel photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="item">
+              <img
+                src="./images/mark.jpg"
+                alt="Mark photo"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="title">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/tom.jpg"
+                alt="Tom photo"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="title">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/camila.jpg"
+                alt="Camila photo"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="title">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/daneil.jpg"
+                alt="Daniel photo"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="title">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logofirst"
-        >Web<span class="logosecond">Studio</span></a
-      >
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer">
+        <a href="./index.html" class="logofirst"
+          >Web<span class="logosecond">Studio</span></a
+        >
+        <p class="footer-discription">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
