--- a/portfolio.html
+++ b/portfolio.html
@@ -10,166 +10,208 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="nav-addres">
+      <div class="container main-nav">
+        <nav class="site-nav">
+          <a href="./index.html" class="logofirst"
+            >Web<span class="logosecond">Studio</span></a
+          >
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="./index.html" class="link">Studio</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="email"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+110001111111" class="tel">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
+    <main>
+      <div class="container portfolio">
+        <section class="section">
+          <h1 hidden>portfolio</h1>
+          <ul class="list buttons">
+            <li class="item">
+              <button type="button" class="btn-portfolio">All</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-portfolio">Web site</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-portfolio">App</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-portfolio">Design</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn-portfolio">Marketing</button>
+            </li>
+          </ul>
+          <ul class="list apps">
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/bankingapp.jpg"
+                  alt="app"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Banking App Interface Concept</h2>
+                  <p>App</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/cashless.jpg"
+                  alt="terminal"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Cashless Payment</h2>
+                  <p>Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="mac"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Meditaion App</h2>
+                  <p>App</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/taxi.jpg"
+                  alt="carsteeringwheel"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Taxi Service</h2>
+                  <p>Marketing</p>
+                </div></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/illustrator.jpg"
+                  alt="moonpicture"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Screen Illustrations</h2>
+                  <p>Design</p>
+                </div></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/curses.jpg"
+                  alt="girlinglasses"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Online Courses</h2>
+                  <p>Marketing</p>
+                </div></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/instdesign.jpg"
+                  alt="manypictures"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Instagram Stories Concept</h2>
+                  <p>Design</p>
+                </div></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/orgfood.jpg"
+                  alt="girls with wegetable"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Organic Food</h2>
+                  <p>Web Site</p>
+                </div></a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="list-item">
+                <img
+                  src="./images/coffe.jpg"
+                  alt="cup with coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="discription">
+                  <h2 class="title-item">Fresh Coffee</h2>
+                  <p>Web Site</p>
+                </div></a
+              >
+            </li>
+          </ul>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="container footer">
         <a href="./index.html" class="logofirst"
           >Web<span class="logosecond">Studio</span></a
         >
-        <ul class="list site-nav">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link current">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="email"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="tel">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </header>
-    <main>
-      <section class="section">
-        <h1 hidden>portfolio</h1>
-        <ul class="list">
-          <li><button type="button" class="btn-portfolio">All</button></li>
-          <li><button type="button" class="btn-portfolio">Web site</button></li>
-          <li><button type="button" class="btn-portfolio">App</button></li>
-          <li><button type="button" class="btn-portfolio">Design</button></li>
-          <li>
-            <button type="button" class="btn-portfolio">Marketing</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/bankingapp.jpg"
-                alt="app"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Banking App Interface Concept</h2>
-              <p>App</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/cashless.jpg"
-                alt="terminal"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Cashless Payment</h2>
-              <p>Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/meditation.jpg"
-                alt="mac"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Meditaion App</h2>
-              <p>App</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/taxi.jpg"
-                alt="carsteeringwheel"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Taxi Service</h2>
-              <p>Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/illustrator.jpg"
-                alt="moonpicture"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Screen Illustrations</h2>
-              <p>Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/curses.jpg"
-                alt="girlinglasses"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Online Courses</h2>
-              <p>Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/instdesign.jpg"
-                alt="manypictures"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Instagram Stories Concept</h2>
-              <p>Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/orgfood.jpg"
-                alt="girls with wegetable"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Organic Food</h2>
-              <p>Web Site</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="list-item">
-              <img
-                src="./images/coffe.jpg"
-                alt="cup with coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="title-item">Fresh Coffee</h2>
-              <p>Web Site</p></a
-            >
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <a href="./index.html" class="logofirst"
-        >Web<span class="logosecond">Studio</span></a
-      >
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="footer-discription">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
