--- a/index.html
+++ b/index.html
@@ -180,9 +180,11 @@
     </main>
     <footer>
       <div class="container footer">
-        <a href="./index.html" class="logofirst"
-          >Web<span class="logosecond">Studio</span></a
-        >
+        <div class="footer-logo">
+          <a href="./index.html" class="logofirst"
+            >Web<span class="logosecond">Studio</span></a
+          >
+        </div>
         <p class="footer-discription">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
