--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
       </div>
     </header>
     <main>
-      <div class="container portfolio">
-        <section class="section">
+      <section class="section">
+        <div class="container portfolio">
           <h1 hidden>portfolio</h1>
           <ul class="list buttons">
             <li class="item">
@@ -199,14 +199,16 @@
               >
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="container footer">
-        <a href="./index.html" class="logofirst"
-          >Web<span class="logosecond">Studio</span></a
-        >
+        <div class="footer-logo">
+          <a href="./index.html" class="logofirst"
+            >Web<span class="logosecond">Studio</span></a
+          >
+        </div>
         <p class="footer-discription">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
