working on fonts and paddings

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section portfolio">
         <div class="container portfolio">
           <h1 hidden>portfolio</h1>
           <ul class="list buttons">
@@ -82,7 +82,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Banking App Interface Concept</h2>
-                  <p>App</p>
+                  <p class="apps-discription">App</p>
                 </div>
               </a>
             </li>
@@ -96,7 +96,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Cashless Payment</h2>
-                  <p>Marketing</p>
+                  <p class="apps-discription">Marketing</p>
                 </div>
               </a>
             </li>
@@ -110,7 +110,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Meditaion App</h2>
-                  <p>App</p>
+                  <p class="apps-discription">App</p>
                 </div>
               </a>
             </li>
@@ -124,7 +124,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Taxi Service</h2>
-                  <p>Marketing</p>
+                  <p class="apps-discription">Marketing</p>
                 </div></a
               >
             </li>
@@ -138,7 +138,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Screen Illustrations</h2>
-                  <p>Design</p>
+                  <p class="apps-discription">Design</p>
                 </div></a
               >
             </li>
@@ -152,7 +152,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Online Courses</h2>
-                  <p>Marketing</p>
+                  <p class="apps-discription">Marketing</p>
                 </div></a
               >
             </li>
@@ -166,7 +166,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Instagram Stories Concept</h2>
-                  <p>Design</p>
+                  <p class="apps-discription">Design</p>
                 </div></a
               >
             </li>
@@ -180,7 +180,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Organic Food</h2>
-                  <p>Web Site</p>
+                  <p class="apps-discription">Web Site</p>
                 </div></a
               >
             </li>
@@ -194,7 +194,7 @@
                 />
                 <div class="discription">
                   <h2 class="title-item">Fresh Coffee</h2>
-                  <p>Web Site</p>
+                  <p class="apps-discription">Web Site</p>
                 </div></a
               >
             </li>
