--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </section>
       <!--what doing-->
-      <section class="section">
+      <section class="section doing">
         <div class="container doing">
           <h2 class="section-title">What are we doing</h2>
           <ul class="what-list list">
@@ -122,7 +122,7 @@
         </div>
       </section>
       <!--team-->
-      <section class="section">
+      <section class="section team">
         <div class="container team">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
